--- a/index.html
+++ b/index.html
@@ -263,25 +263,30 @@
                 Videos
         </div>
         <div class="content_section_text">
-          <video width="320" height="240" controls autoplay>
-            <source src="media/video/1.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
-
-          <video width="320" height="240" controls autoplay>
-            <source src="media/video/2.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
-
-          <video width="320" height="240" controls autoplay>
-            <source src="media/video/3.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
-
-          <video width="320" height="240" controls autoplay>
-            <source src="media/video/4.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
+			<div>
+			  <video width="320" height="240" controls autoplay>
+				<source src="media/video/1.mp4" type="video/mp4">
+			  Your browser does not support the video tag.
+			  </video>
+			</div>
+			<div>
+			  <video width="320" height="240" controls autoplay>
+				<source src="media/video/2.mp4" type="video/mp4">
+			  Your browser does not support the video tag.
+			  </video>
+			</div>
+			<div>
+			  <video width="320" height="240" controls autoplay>
+				<source src="media/video/3.mp4" type="video/mp4">
+			  Your browser does not support the video tag.
+			  </video>
+			</div>
+			<div>
+			  <video width="320" height="240" controls autoplay>
+				<source src="media/video/4.mp4" type="video/mp4">
+			  Your browser does not support the video tag.
+			  </video>
+			</div>
         </div>
 
         <div class="section_header">
@@ -290,12 +295,24 @@
         </div>
 
         <div class="content_section_text">
-            <img src = "media/img/1.jpg">
-            <img src = "media/img/2.jpg">
-            <img src = "media/img/3.jpg">
-            <img src = "media/img/4.jpg" >
-            <img src = "media/img/5.jpg">
-            <img src = "media/img/6.jpg">
+			<div>
+				<img src = "media/img/1.jpg">
+			</div>
+			<div>
+				<img src = "media/img/2.jpg">
+			</div>
+			<div>
+				<img src = "media/img/3.jpg">
+            </div>
+			<div>
+				<img src = "media/img/4.jpg" >
+			</div>
+			<div>
+				<img src = "media/img/5.jpg">
+			</div>
+			<div>
+				<img src = "media/img/6.jpg">
+			</div>
         </div>
 
       </div>
